--- a/force-app/main/default/lwc/searchFilter/searchFilter.html
+++ b/force-app/main/default/lwc/searchFilter/searchFilter.html
@@ -2,24 +2,20 @@
    <lightning-card>
       <lightning-layout multiple-rows="true" vertical-align="end">
          <lightning-layout-item size="4" padding="around-small">
-            <lightning-input type="text" label="Search By Name"
-               value={searchKey} 
-               onchange={handelSearchKey}> 
-            </lightning-input>
+            <lightning-input type="text" label="Search By Name" onchange={handelSearchKey}></lightning-input>
          </lightning-layout-item >
-
          <lightning-layout-item size="2" padding="around-small">
-            <lightning-button label="Filter" variant="brand" onclick={SearchAccountHandler}>
-
-            </lightning-button>
+            <lightning-button label="Filter" variant="brand" onclick={searchContactHandler}></lightning-button>
          </lightning-layout-item>
+         <template if:true={contacts}>
             <lightning-datatable
-               key-field="Id"
-               data={contacts}
-               columns={columns}
-               hide-checkbox-column="true"
-               show-row-number-column="true">
+                              key-field="Id"
+                              data={contacts}
+                              columns={columns}
+                              hide-checkbox-column="true"
+                              show-row-number-column="true">               
             </lightning-datatable>
+         </template>  
       </lightning-layout>
-  </lightning-card> 
+   </lightning-card> 
 </template>
